@@ -1,3 +1,8 @@
+2013-11-05  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/58984
+	* gcc.c-torture/execute/pr58984.c: New test.
+
 2013-11-04  Marek Polacek  <polacek@redhat.com>
 
 	Backport from mainline
